# agentdash

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  jest.config.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
dashboard/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.js
dashboard/src/: App.jsx  index.css
dashboard/src/components/: Sidebar.jsx  StatusBadge.jsx
dashboard/src/context/: SettingsContext.jsx  WsContext.jsx
dashboard/src/lib/: api.js
dashboard/src/pages/: ComparePage.jsx  HomePage.jsx  ProjectsPage.jsx  RunDetailPage.jsx  RunsPage.jsx  SettingsPage.jsx  TrendsPage.jsx
examples/anthropic_agent/: agent.py
examples/mcp_agent/: agent.py
examples/n8n_agent/: agent.py  agent_urllib.py
examples/simple_agent/: agent.py
sdk/js/: package.json
sdk/js/src/: index.js
sdk/python/: pyproject.toml  requirements.txt  setup.py
sdk/python/agentdash/: __init__.py  client.py  instrumentation.py  run.py  span.py
server/: Dockerfile  db.js  index.js  package.json
tests/: server.test.js  test_sdk.py
